Bugfix: Flow Deletion did not remove uploaded bulk files. (#2589)
Also

* User GUI missing scrollbar for many users.
* Added the ability to filter hunts by username.

--- a/gui/velociraptor/src/components/users/user.css
+++ b/gui/velociraptor/src/components/users/user.css
@@ -48,3 +48,15 @@
     padding-right: 20px;
     display: inline;
 }
+
+.user-list {
+    max-height: calc(100vh - 180px);
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.org-list {
+    max-height: calc(100vh - 180px);
+    overflow-y: auto;
+    overflow-x: hidden;
+}
